--- a/examples/01-geolocation/geolocation.html
+++ b/examples/01-geolocation/geolocation.html
@@ -13,6 +13,7 @@
         <header>
             <h1>Geolocation</h1>
             <p><a href="../../index.html">Return to Main Menu</a></p>
+            <p><a href="https://github.com/bmbruno/js-does-that/blob/main/examples/01-geolocation/geolocation.js" target="_blank">Source Code</a></p>
         </header>
 
         <div class="content">
@@ -33,6 +34,7 @@
 
                 <h2>Browser Support</h2>
                 <p class="browser-support"><img src="../base/icons/good.svg" alt="Good browser support." /><span>Good</span> - <a href="">Supported Browsers on MDN</a></p>
+
             </div>
 
             <div class="card">
