--- a/examples/04-canvas/canvas.html
+++ b/examples/04-canvas/canvas.html
@@ -14,6 +14,7 @@
         <header>
             <h1>Canvas</h1>
             <p><a href="../../index.html">Return to Main Menu</a></p>
+            <p><a href="https://github.com/bmbruno/js-does-that/tree/main/examples/04-canvas" target="_blank">Source Code</a></p>
         </header>
 
         <div class="content">
