--- a/examples/08-idle-detection/idle.html
+++ b/examples/08-idle-detection/idle.html
@@ -13,6 +13,7 @@
         <header>
             <h1>Web Workers</h1>
             <p><a href="../../index.html">Return to Main Menu</a></p>
+            <p><a href="https://github.com/bmbruno/js-does-that/blob/main/examples/08-idle-detection/idle.js" target="_blank">Source Code</a></p>
         </header>
 
         <div class="content">
