--- a/examples/09-gamepad/gamepad.html
+++ b/examples/09-gamepad/gamepad.html
@@ -13,6 +13,7 @@
         <header>
             <h1>Gamepad API</h1>
             <p><a href="../../index.html">Return to Main Menu</a></p>
+            <p><a href="https://github.com/bmbruno/js-does-that/blob/main/examples/09-gamepad/gamepad.js" target="_blank">Source Code</a></p>
         </header>
 
         <div class="content">
