Implemented getData method of Fetch example.

--- a/examples/03-fetch/fetch.html
+++ b/examples/03-fetch/fetch.html
@@ -40,7 +40,7 @@
 
                 <h2>Demo: get data from a server</h2>
 
-                <button type="button" onclick="">Get Data</button>
+                <button type="button" onclick="Demo.Fetch.getData();">Get Data</button>
                 <p>Gets various kinds of data from a server. Demonstrates use of the Response object.</p>
                 
             </div>
