Implemented fetch (with errors).

--- a/examples/03-fetch/fetch.html
+++ b/examples/03-fetch/fetch.html
@@ -49,8 +49,9 @@
 
                 <h2>Demo: send data to a server</h2>
 
-                <button type="button" onclick="">Send Data</button>
+                <button type="button" onclick="Demo.Fetch.sendData();">Send Data</button>
                 <p>Uses a POST to send data to a server. Demonstrates use of headers and CORS settings.</p>
+                <p>POST URL: <input type="text" id="PostURL" /> (try using <a href="https://www.postb.in" target="_blank">PostBin</a>)</p>
                 
             </div>
 
