--- a/examples/12-filesystem/filesystem.html
+++ b/examples/12-filesystem/filesystem.html
@@ -21,8 +21,8 @@
             <div class="card">
 
                 <h2>What is the <span class="mono">File System API</span>?</h2>
-                <p>Provides access to read and write files on the local system.</p>
-                <p>NOTE: this contrasts with the <code>File API</code>, which works locally in JavaScript stricly on files provided by the user (via an <code>&lt;input&gt;</code> control, for example). Files written to disk are stored in a sandboxed area known as "origin private file system".</p>
+                <p>Provides access to read and write files on the local system. Files written to disk are stored in a sandboxed area known as "origin private file system".</p>
+                <p>NOTE: this contrasts with the <code>File API</code>, which works locally in JavaScript stricly on files provided by the user (via an <code>&lt;input&gt;</code> control, for example).</p>
                 <p>NOTE: the <code>File System Access API</code> provides direct access to the entire local file system with a different API that explicitly requires user permission.</p>
 
                 <h2>Why should you use the <span class="mono">File System API</span>?</h2>
@@ -42,8 +42,8 @@
 
                 <h2>Demo: extract file information</h2>
 
-                <button type="button" onclick="">DEMO_ACTION</button>
-                <p>Lets the user pick a local file, then analyzes it. Information is displayed in this app's console and written out to a file that the user can save on their local file system.</p>
+                <button type="button" onclick="Demo.FileSystemAPI.readFile();">Read a File</button>
+                <p>Lets the user pick a local file (.txt, .md), then displays its contents. Information is displayed in this app's console and written out to a file that the user can save on their local file system.</p>
                 
             </div>
 
