Refined File System API content. Changed scoping of certain variables.

--- a/examples/12-filesystem/filesystem.html
+++ b/examples/12-filesystem/filesystem.html
@@ -21,9 +21,8 @@
             <div class="card">
 
                 <h2>What is the <span class="mono">File System API</span>?</h2>
-                <p>Provides access to read and write files on the local system. Files written to disk are stored in a sandboxed area known as "origin private file system".</p>
-                <p>NOTE: this contrasts with the <code>File API</code>, which works locally in JavaScript stricly on files provided by the user (via an <code>&lt;input&gt;</code> control, for example).</p>
-                <p>NOTE: the <code>File System Access API</code> provides direct access to the entire local file system with a different API that explicitly requires user permission.</p>
+                <p>Provides access to read and write files on the local system.</p>
+                <p>NOTE: complete read/write functionality to the local file system are possible when combined with the <code>File API</code> and <code>File System Access API</code>.</p>
 
                 <h2>Why should you use the <span class="mono">File System API</span>?</h2>
                 <p>For web applications, access to local files can provide flexible options for storing content on a user's device for processing or interaction (for example, offline videos or other media).</p>
