Added both demo sections to IndexedDB.

--- a/examples/13-indexdb/indexdb.html
+++ b/examples/13-indexdb/indexdb.html
@@ -40,8 +40,17 @@ storage<html>
 
                 <h2>Demo: store data in a database</h2>
 
-                <button type="button" onclick="">DEMO_ACTION</button>
-                <p>Stores several complex JavaScript objects in an indexed database.</p>
+                <button type="button" onclick="Demo.IndexedDB.saveToDatabase();">Save to Database</button>
+                <p>Writes names to a local client-side database.</p>
+                
+            </div>
+
+            <div class="card">
+
+                <h2>Demo: read from database</h2>
+
+                <button type="button" onclick="Demo.IndexedDB.queryDatabase();">Read from Database</button>
+                <p>Queries a local IndexedDB from a .</p>
                 
             </div>
 
