Added remaining logic to IndexedDB write function. Need to debug.

--- a/examples/13-indexdb/indexdb.html
+++ b/examples/13-indexdb/indexdb.html
@@ -40,8 +40,12 @@ storage<html>
 
                 <h2>Demo: store data in a database</h2>
 
-                <button type="button" onclick="">DEMO_ACTION</button>
+                <button type="button" onclick="Demo.IndexedDB.saveToDatabase();">Save to Database</button>
                 <p>Stores several complex JavaScript objects in an indexed database.</p>
+                <p>
+                    <label for="FirstName">First Name</label> <input type="text" id="FirstName" /><br/><br/>
+                    <label for="LastName">Last Name</label> <input type="text" id="LastName" />
+                </p>
                 
             </div>
 
