Added game platformer example.

--- a/examples/09-gamepad/gamepad.html
+++ b/examples/09-gamepad/gamepad.html
@@ -39,10 +39,7 @@
             <div class="card">
 
                 <h2>Demo: view controller input</h2>
-<!--
-                <button type="button" onclick="Demo.Gamepad.viewInput();">DEMO_ACTION</button>
-                <p>DESCRIPTION</p>
--->
+
                 <ul class="controller">
                     <li>Button 0 (A): <span id="Button_0" class="input-display"></span></li>
                     <li>Button 1 (B): <span id="Button_1" class="input-display"></span></li>
@@ -71,6 +68,11 @@
                     <li>Axis 3: <span id="Axis_3" class="input-display"></span></li>
                 </ul>
                 
+            </div>
+
+            <div class="card">
+                <h2>Demo: simple game with controller</h2>
+                <a href="game.html" target="_blank">Open Game</a>
             </div>
 
             <div class="card">
