--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>JavaScript Does THAT!? Examples</title>
         <link href="examples/base/main.css" type="text/css" rel="stylesheet" />
         <link href="examples/base/fontawesome.min.css" type="text/css" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
