Removed indexedDB example (for now).

--- a/index.html
+++ b/index.html
@@ -77,16 +77,13 @@
                 <p>Provides access to read and write files on the local system.</p>
             </div>
 
+            <!-- Yeah, this isn't ready for primetime
             <div class="card">
                 <h2><a href="examples/13-indexdb/indexdb.html"><i class="fa fa-database" aria-hidden="true"></i> IndexDB API</a></h2>
                 <p>Provides a transactional database for storing large amounts of structured data on the client.</p>
             </div>
-
-
-
-
-
-
+            -->
+            
         </div>
     
     </body>
