Removed Postbin reference.

--- a/examples/03-fetch/fetch.html
+++ b/examples/03-fetch/fetch.html
@@ -51,7 +51,7 @@
 
                 <button type="button" onclick="Demo.Fetch.sendData();">Send Data</button>
                 <p>Uses a POST to send data to a server. Demonstrates use of headers and CORS settings.</p>
-                <p>POST URL: <input type="text" id="PostURL" /> (try using <a href="https://www.postb.in" target="_blank">PostBin</a>)</p>
+                <p>POST URL: <input type="text" id="PostURL" /> (any endpoint that accepts a POST)</p>
                 
             </div>
 
